--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -10,18 +10,20 @@ services:
       - ../backend:/app
     env_file:
       - ../.env
-db:
-  image: postgres:15
-  container_name: postgres
-  restart: always
-  ports:
-    - "5432:5432"
-  environment:
-    POSTGRES_USER: fastapi_user
-    POSTGRES_PASSWORD: fastapi_pass
-    POSTGRES_DN: expense_tracker
-  volumes:
-    - pgdata:/var/lib/postgresql/data
-  env_file:
-    - ../.env
+  db:
+    image: postgres:15
+    container_name: postgres
+    restart: always
+    ports:
+      - "5432:5432"
+    environment:
+      POSTGRES_USER: fastapi_user
+      POSTGRES_PASSWORD: fastapi_pass
+      POSTGRES_DN: expense_tracker
+    volumes:
+      - pgdata:/var/lib/postgresql/data
+    env_file:
+      - ../.env
 
+volumes:
+  pgdata:
