--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -24,6 +24,22 @@ services:
       - pgdata:/var/lib/postgresql/data
     env_file:
       - ../.env
+  frontend:
+    container_name: frontend
+    build: 
+      context: ../frontend
+    volumes:
+      - ../frontend/smart-expense-tracker:/app
+    ports:
+      - "5173:5173"
+    env_file:
+      - ../.env
+    working_dir: /app
+    command: npm run dev
+    environment:
+      - CHOKIDAR_USEPOLLING=true
+
+    
 
 volumes:
   pgdata:
